# amber

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  environment.yml  run_tests.sh
.github/workflows/: ci.yml  release.yml
.scripts/: validate_bins_checkm2.sh
cmake/: version.h.in
conda_recipe/: meta.yaml
include/amber/: config.hpp
scripts/: aggregate_smiley.py  plot_smiley.py
src/: bin2.cpp  bin2.cpp.backup_determinism  bin2_config.h  chimera.cpp  deconvolve.cpp  main.cpp  polish.cpp
src/algorithms/: bayesian_caller.h  chimera_detector.cpp  chimera_detector.h  coupling_features.cpp  coupling_features.h  coverage_features.cpp  coverage_features.h  damage_extraction_stub.cpp  damage_features.cpp  damage_features.h  damage_likelihood.h  damage_profile.cpp  damage_profile.h  damage_read_classifier.h  fractal_features.cpp  fractal_features.h  graph_prune.h  iqs_stats.h  kmer_features.cpp  kmer_features.h  kmer_graph.h  multisignal_cleanup.h  parallel_coverage.cpp  parallel_coverage.h  pca.cpp  pca.h  polish_engine.h  ppr_cleanup.h  protein_conflict.h  ref_reader.cpp  ref_reader.h  sequence_utils.cpp  sequence_utils.h  strain_deconvolution.h  strobemer_features.h  syncmer_features.h  tnf_graph.h
src/bin2/clustering/: bin_confidence.h  clustering_types.h  consensus_knn.cpp  consensus_knn.h  edge_weighter.cpp  edge_weighter.h  ensemble_leiden.cpp  ensemble_leiden.h  hnsw_knn_index.cpp  hnsw_knn_index.h  leiden_backend.cpp  leiden_backend.h  leiden_igraph.h  marker_index.cpp  marker_index.h  partition_consensus.h  quality_hierarchical.cpp  quality_hierarchical.h  quality_leiden_backend.cpp  quality_leiden_backend.h
src/bin2/encoder/: amber_encoder.h  comebin_encoder.h  comebin_encoder.h.backup_determinism  damage_aware_infonce.h  encoder_types.h  info_nce_loss.h  multiscale_cgr.h  scg_hard_negatives.h  substring_augmenter.h
src/bin2/io/: abin.h
src/bin2/quality/: checkm_markers.cpp  checkm_markers.h  marker_quality.cpp  marker_quality.h
src/binner/: binner.cpp
src/binner/internal/: cleanup_ops.h  constants.h  contamination_cleanup.h  iqs_stats.h  k_estimation.h  probabilistic_models.h  quality_metrics.h  types.h
src/cli/: cli_common.cpp  cli_common.h  cmd_bin.cpp  cmd_bin2.cpp  cmd_bin_stub.cpp  cmd_chimera.cpp  cmd_damage.cpp  cmd_deconvolve.cpp  cmd_polish.cpp  cmd_resolve.cpp  cmd_seeds.cpp
src/seeds/: seed_generator.cpp  seed_generator.h
src/util/: logger.h
testing/: run_ablation.sh  run_winning.sh
wiki/: Benchmarks.md  Command-Reference.md  Home.md  Methods-and-Model.md  Output-Formats.md  Quick-Start-Tutorial.md  _Sidebar.md  aDNA-Features.md
workflow_paper/: Snakefile  run_paper.sh
workflow_paper/scripts/: build_snp_matrix.py
